fix: mudando overflow

--- a/styles/style.css
+++ b/styles/style.css
@@ -43,7 +43,7 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 1rem;
-  overflow-x: visible;
+  overflow: visible;
 }
 
 nav {
